--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 <body>
     <div class="container">
         <div class="img_blocks">
-            <img src="images/1.jpg" alt="">
-            <img src="images/2.jpg" alt="">
-            <img src="images/3.jpg" alt="">
-            <img src="images/4.jpg" alt="">
-            <img src="images/5.jpg" alt="">
-            <img src="images/6.jpg" alt="">
-            <img src="images/7.jpg" alt="">
-            <img src="images/8.jpg" alt="">
+            <img src="../flexbox-course/images/1.jpeg" alt="">
+            <img src="../flexbox-course/images/2.jpeg" alt="">
+            <img src="../flexbox-course/images/3.jpeg" alt="">
+            <img src="../flexbox-course/images/4.jpeg" alt="">
+            <img src="../flexbox-course/images/5.jpeg" alt="">
+            <img src="../flexbox-course/images/6.jpeg" alt="">
+            <img src="../flexbox-course/images/7.jpeg" alt="">
+            <img src="../flexbox-course/images/8.jpeg" alt="">
         </div>
     </div>
 </body>
